--- a/views/index.jade
+++ b/views/index.jade
@@ -1,27 +1,30 @@
 extends layout
-
 block content
-  link(rel='stylesheet', href='../css/style.css')
-  link(rel='stylesheet', href='../css/container.css')
-  core-header-panel()
-    core-toolbar()
-      paper-tabs(id="tabs" selected="all" self-end)
-        paper-tab(name="all").
-          Containers
-        paper-tab(name="favorites").
-          Cluster Map
-        paper-tab(name="about").
-          About
-          
-  .container(layout vertical center)        
-    block post-card
-      h2 aaasdfasdfasfasfsdfassdafasdfsdf
-      p a
-      img("height=70" "width=70" "src=http://3.bp.blogspot.com/-kwoCGd1AvQs/URZaP8u3cdI/AAAAAAAABJ0/_zE0HY1XaLA/s1600/octocat.png")
-      
-    block post-card
-      h2 aaasdfasdfasfasfsdfassdafasdfsdf
-      p a
-      img("height=70" "width=70" "src=http://3.bp.blogspot.com/-kwoCGd1AvQs/URZaP8u3cdI/AAAAAAAABJ0/_zE0HY1XaLA/s1600/octocat.png")
-   
-   
+    div.topbar
+        div.fill
+            div.container
+                a.brand(href='#') #{title}
+                ul.nav
+                    li.active
+                        a(href='#') Home
+                    li
+                        a(href='#about') About
+                    li
+                        a(href='#contact') Contact
+                form.pull-right(method="post", id="loginForm")
+                    input.input-small(id="username", type="text", name="User", placeholder="Username")
+                    input.input-small(id="password", type="password", name="Password", placeholder="Password")
+                    input.btn.primary(type="submit", value="Sign In")
+                p#loginPrompt.pull-right.login-prompt
+    div.container
+        div.content
+            div.page-header
+                h1 Main Page
+                small Welcome to #{title}
+            div.row
+                div.span4 
+                    h2 Page Content
+                div.span4
+                    h3 Secondary Content
+        div.footer
+            p &copy; test 2013
