--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0;
-  background-color: E5E5E5;
+  background-color: grey;
   font-family: 'RobotoDraft', sans-serif;
 }
 core-header-panel {
@@ -12,7 +12,7 @@ core-header-panel {
 }
 core-toolbar {
   background: #03a9f4;
-  color: black;
+  color: white;
 }
 #tabs {
   width: 100%;
@@ -27,9 +27,11 @@ core-toolbar {
   width: 80%;
   margin: 50px auto;
 }
-media (min-width: 481px) .tabs {
-  width: 200px;
-}
-media (min-width: 481px) .container {
-  width: 400px;
+@media (min-width: 481px) {
+  #tabs {
+    width: 200px;
+  }
+  .container {
+    width: 600px;
+  }
 }
