--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,17 +1,19 @@
 doctype html
 html(lang='en')
   head
+    meta(name='viewport' content=' content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes')
     title= "charliefoxtrot"
     block css
-      link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
-      link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css')
+      link(rel='stylesheet', href='../css/style.css')
+
     block js
-      script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
       script(src='http://localhost:35729/livereload.js')
-      script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js")
-      
-      
-  body()
+      script(src="/components/webcomponentsjs/webcomponents.js")
+
+      link(rel="import", href="../components/font-roboto/roboto.html")
+      link(rel="import", href="../components/core-header-panel/core-header-panel.html")
+      link(rel="import", href="../components/core-toolbar/core-toolbar.html")
+      link(rel="import", href="../components/core-media-query/core-media-query.html")
+      link(rel="import", href="../components/paper-tabs/paper-tabs.html")
+      link(rel="import", href="/post-list.html")
     block content
-
-
