got the sliding stuff working

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,10 @@ core-toolbar {
   background: #03a9f4;
   color: white;
 }
+.item {
+  width: 250px;
+  height: 250px;
+}
 #tabs {
   width: 100%;
   margin: 0;
@@ -25,13 +29,14 @@ core-toolbar {
 }
 .container {
   width: 80%;
-  margin: 50px auto;
+  margin: 50px 50px;
 }
 @media (min-width: 481px) {
   #tabs {
     width: 200px;
   }
   .container {
-    width: 600px;
+    width: 80%;
+    margin: 50px 50px;
   }
 }
