--- a/public/css/style.less
+++ b/public/css/style.less
@@ -13,6 +13,10 @@
       background: #03a9f4;
       color: white;
     }
+    .item {
+      width: 250px;
+      height: 250px;
+    }
     #tabs {
       width: 100%;
       margin: 0;
@@ -24,13 +28,14 @@
     }
     .container {
       width: 80%;
-      margin: 50px auto;
+      margin: 50px 50px;
     }
     @media (min-width: 481px) {
       #tabs {
         width: 200px;
       }
       .container {
-        width: 600px;
+        width: 80%;
+        margin: 50px 50px;
       }
     }
