--- a/views/elements/post-card.jade
+++ b/views/elements/post-card.jade
@@ -7,52 +7,22 @@ html.
       <style>
       :host {
         display: block;
-        position: relative;
         background-color: white;
-        padding: 20px;
-        width: 100%;
-        font-size: 1.2rem;
-        font-weight: 300;
-        margin:  10px;
+       
       }
-      .card-header {
-        margin-bottom: 10px;
-      }
-      polyfill-next-selector { content: '.card-header h2'; }
-      .card-header ::content h2 {
-        margin: 0;
-        font-size: 1.8rem;
-        font-weight: 300;
-      }
-      polyfill-next-selector { content: '.card-header img'; }
-      .card-header ::content img {
-        width: 70px;
-        border-radius: 50%;
-        margin: 10px;
-      }
-      core-icon-button {
-        position: absolute;
-        top: 3px;
-        right: 3px;
-        color: #636363;
-      }
-      :host([favorite]) core-icon-button {
-        color: #da4336;
-      }
+    
+    
       </style>
 
-      <div class="card-header" layout horizontal center>
+      <div class="card-header" >
 
         <content select="img"></content>
         <content select="h2"></content>
-
+        <content select="p"></content>
+        <content select="p"></content>
+        <content select="p"></content>
       </div>
 
-      <core-icon-button
-        id="favicon"
-        icon="favorite"
-        on-tap="{{favoriteTapped}}">
-      </core-icon-button>
 
       <content></content>
     </template>
