--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,11 +9,12 @@ html(lang='en')
     block js
       script(src='http://localhost:35729/livereload.js')
       script(src="/components/webcomponentsjs/webcomponents.js")
-
+      script(src="../components/packery/dist/packery.pkgd.js")
       link(rel="import", href="../components/font-roboto/roboto.html")
       link(rel="import", href="../components/core-header-panel/core-header-panel.html")
       link(rel="import", href="../components/core-toolbar/core-toolbar.html")
       link(rel="import", href="../components/core-media-query/core-media-query.html")
       link(rel="import", href="../components/paper-tabs/paper-tabs.html")
+      link(rel="import", href="../components/juicy-tile-list/dist/juicy-tile-list.html")
       link(rel="import", href="/post-list.html")
     block content
